allow nginx ingress2

--- a/argocd/apps/media-server/qbittorrent/net-policy.yaml
+++ b/argocd/apps/media-server/qbittorrent/net-policy.yaml
@@ -17,16 +17,13 @@ spec:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: sonarr
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: ingress-nginx 
       ports:
         - protocol: TCP
           port: 8080
-    - from:
-        - namespaceSelector:
-            matchLabels:
-              kubernetes.io/metadata.name: ingress-nginx  # or your ingress namespace
-          podSelector:
-            matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+
               
   egress:
     # Responses to services which use qBittorrent
@@ -37,6 +34,9 @@ spec:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: sonarr
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: ingress-nginx 
       ports:
         - protocol: TCP
           port: 8080
