--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -38,7 +38,7 @@ spec:
             name: config
           - mountPath: /data/media/torrents
             name: torrents
-        readinessProbe:
+        startupProbe:
           tcpSocket:
             port: 8080
           initialDelaySeconds: 300
@@ -92,10 +92,10 @@ spec:
           capabilities:
             add:
             - NET_ADMIN
-        readinessProbe:
+        startupProbe:
           exec:
             command: ["/gluetun-entrypoint", "healthcheck"]
-          initialDelaySeconds: 120
+          initialDelaySeconds: 60
           periodSeconds: 5
           timeoutSeconds: 5
           failureThreshold: 3
