--- a/argocd/apps/vaultwarden/app.yaml
+++ b/argocd/apps/vaultwarden/app.yaml
@@ -31,13 +31,13 @@ spec:
               nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
               nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
           domain: "https://bitwarden.k8s.yanello.net"
-          replicas: 3
           signupsAllowed: false
-          service:
-            sessionAffinity: ClientIP
-            sessionAffinityConfig:
-              clientIP:
-                timeoutSeconds: 10800
+          # replicas: 3
+          # service:
+          #   sessionAffinity: ClientIP
+          #   sessionAffinityConfig:
+          #     clientIP:
+          #       timeoutSeconds: 10800
           storage:
             data:
               name: vaultwarden-data
