--- a/argocd/apps/media-server/prowlarr/deploy.yaml
+++ b/argocd/apps/media-server/prowlarr/deploy.yaml
@@ -6,12 +6,15 @@ metadata:
     app: prowlarr
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: prowlarr
   strategy:
     type: Recreate
   template:
-  metadata:
-    labels:
-      app: prowlarr
+    metadata:
+      labels:
+        app: prowlarr
     spec:
       containers:
         - env:
