--- a/argocd/apps/media-server/prowlarr/deploy.yaml
+++ b/argocd/apps/media-server/prowlarr/deploy.yaml
@@ -24,7 +24,7 @@ spec:
               value: "1000"
             - name: TZ
               value: America/Chicago
-          image: linuxserver/prowlarr:latest
+          image: ghcr.io/hotio/prowlarr:latest
           imagePullPolicy: Always
           name: prowlarr
           ports:
