--- a/argocd/apps/media-server/prowlarr/deploy.yaml
+++ b/argocd/apps/media-server/prowlarr/deploy.yaml
@@ -75,25 +75,25 @@ spec:
         app: flaresolverr
     spec:
       containers:
-          image: ghcr.io/flaresolverr/flaresolverr:latest
-          imagePullPolicy: Always
-          name: flaresolverr
-          ports:
-            - containerPort: 8191
-              protocol: TCP
-          startupProbe:
-            httpGet:
-              path: /
-              port: 8191
-            initialDelaySeconds: 60
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 8191
-            initialDelaySeconds: 60
-            periodSeconds: 15
-            timeoutSeconds: 5
-            failureThreshold: 3
+      - image: ghcr.io/flaresolverr/flaresolverr:latest
+        imagePullPolicy: Always
+        name: flaresolverr
+        ports:
+          - containerPort: 8191
+            protocol: TCP
+        startupProbe:
+          httpGet:
+            path: /
+            port: 8191
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8191
+          initialDelaySeconds: 60
+          periodSeconds: 15
+          timeoutSeconds: 5
+          failureThreshold: 3
