--- a/argocd/apps/media-server/unpackerr/secrets/secret-generator.yaml
+++ b/argocd/apps/media-server/unpackerr/secrets/secret-generator.yaml
@@ -2,10 +2,10 @@ apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
   # Specify a name
-  name: vpn-secret-generator
+  name: secret-generator
   annotations:
     config.kubernetes.io/function: |
       exec:
         path: ksops
 files:
-  - vpn-secrets.enc.yaml
+  - secrets.enc.yaml
