--- a/argocd/apps/media-server/unpackerr/deploy.yaml
+++ b/argocd/apps/media-server/unpackerr/deploy.yaml
@@ -39,7 +39,7 @@ spec:
               value: /data/logs/log.txt
             - name: UN_FOLDER_0_MOVE_BACK
               value: "true"
-          envFromSecret:
+          envFrom:
             - secretRef:
                 name: unpackerr-secrets
           image: golift/unpackerr:latest
