--- a/argocd/apps/media-server/unpackerr/secrets/secrets.enc.yaml
+++ b/argocd/apps/media-server/unpackerr/secrets/secrets.enc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: vpn-secrets
+    name: unpackerr-secrets
 type: Opaque
 stringData:
     UN_RADARR_0_API_KEY: ENC[AES256_GCM,data:e5SSPvPWN27fvEeSC1NsPslMW1HabbVcDRvFQkR/JFo=,iv:aCCcmiEL+omaDueq2glLB9ezC1fH6fI9DL/o6GxcCYM=,tag:oM4aTj87lgsI5j6vxMtOkA==,type:str]
@@ -21,8 +21,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-27T20:49:30Z"
-    mac: ENC[AES256_GCM,data:KqMtdwupNwdywkleYVmshW2FLl4V75h0frDR4f//3qUzOf3zDSHPrffEQu0mH5jnBfb1dzUnbiM1/4kvlMo84SlC6gH7738uy+Ec8/3qZUD1OShcOywjQrThtZvQyhOzBr2EKY4YnaSFnGbooxW//46u7KqIr4B7v0MgUgjNj5o=,iv:rc1OwLkNw4K55Ta8D/0Zk2/zzT+GuWM5m8Lq/BKvnRI=,tag:RCF5nGB6ViNgoKH+V55tPA==,type:str]
+    lastmodified: "2025-01-27T20:56:48Z"
+    mac: ENC[AES256_GCM,data:1QtDjOpf2JSahYLAl2NZdftdcZHzQ9iV5ZMsIQUObSF3R7C1q29q6HxcBawf0tqa5q5SCz5Mjp/LaAdUZ+hjfNqQ0kxwNy6cMYcU4b17WobwEFFyo4kWpqW3Bdvcc3rjZnELsChsRJnoFSUq27GbMa8YeBIRLycErkoFBYjMqRg=,iv:0n5g1x80qK/9gAWy1vGQNGCvEKa5ZVG2i5+oBcOAiFg=,tag:cVnWu2nikw6O4wqtj5BJDA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
