--- a/argocd/apps/media-server/unpackerr/secrets/secrets.enc.yaml
+++ b/argocd/apps/media-server/unpackerr/secrets/secrets.enc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: unpackerr-secrets
+    namespace: unpackerr
 type: Opaque
 stringData:
     UN_RADARR_0_API_KEY: ENC[AES256_GCM,data:e5SSPvPWN27fvEeSC1NsPslMW1HabbVcDRvFQkR/JFo=,iv:aCCcmiEL+omaDueq2glLB9ezC1fH6fI9DL/o6GxcCYM=,tag:oM4aTj87lgsI5j6vxMtOkA==,type:str]
@@ -21,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-27T20:56:48Z"
-    mac: ENC[AES256_GCM,data:1QtDjOpf2JSahYLAl2NZdftdcZHzQ9iV5ZMsIQUObSF3R7C1q29q6HxcBawf0tqa5q5SCz5Mjp/LaAdUZ+hjfNqQ0kxwNy6cMYcU4b17WobwEFFyo4kWpqW3Bdvcc3rjZnELsChsRJnoFSUq27GbMa8YeBIRLycErkoFBYjMqRg=,iv:0n5g1x80qK/9gAWy1vGQNGCvEKa5ZVG2i5+oBcOAiFg=,tag:cVnWu2nikw6O4wqtj5BJDA==,type:str]
+    lastmodified: "2025-01-27T20:58:04Z"
+    mac: ENC[AES256_GCM,data:TfwGvBx4PKVc3m+aJdEFNm1m6aFbSehG1xDnQJZQkhjxpc+tGSpeNSLUaUH/C5egM3doZIXv+8J2Sgf/sUR+M6eCsksSlTYLnsoTONO20QrvJ8QzvcOpaazIt9XpYGKC5GugODcrv6jqvAe+ukblYL+xvmg78x4r7ksDtdXtd8Y=,iv:TijF3w/Bg29SbTteoRubItcOWZXleLzVQ1MYwjoHhbE=,tag:4kEIzqU9184mvR00Yn2bNg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
