--- a/argocd/apps/media-server/unpackerr/secrets-app.yaml
+++ b/argocd/apps/media-server/unpackerr/secrets-app.yaml
@@ -12,6 +12,7 @@ spec:
     - CreateNamespace=true
   destination:
     server: https://kubernetes.default.svc
+    namespace: unpackerr
   project: default
   source:
     path: argocd/apps/media-server/unpackerr/secrets
