--- a/argocd/apps/media-server/unpackerr/secrets/secrets.enc.yaml
+++ b/argocd/apps/media-server/unpackerr/secrets/secrets.enc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: unpackerr-secrets
+    namespace: unpackerr
 type: Opaque
 stringData:
     UN_RADARR_0_API_KEY: ENC[AES256_GCM,data:e5SSPvPWN27fvEeSC1NsPslMW1HabbVcDRvFQkR/JFo=,iv:aCCcmiEL+omaDueq2glLB9ezC1fH6fI9DL/o6GxcCYM=,tag:oM4aTj87lgsI5j6vxMtOkA==,type:str]
@@ -21,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-27T20:58:30Z"
-    mac: ENC[AES256_GCM,data:kOG4XzY+rsp6OWQltRhhIXwZtwNJfLHSMjLirzh0olQQP2sWZflTn7OmzMwcUdK0efe5UqkAH9Rk3PGywkCPKpnrw4+RrAzU8wXXxLnon777BZqvxKJAUJegkpHgHoUv9iTmzqpF8lz8MH2luQVay5UR6VoKcb0ruCxu96/xXFo=,iv:WVDQes1QSFQl8Fe36NAyn4y0Rb3knn/VQQ5IBStlD5M=,tag:Q6ceZt2XzdW3ZVC9gjkD3w==,type:str]
+    lastmodified: "2025-01-27T20:59:06Z"
+    mac: ENC[AES256_GCM,data:JbXtX69HPPA8ex6aKDu1Og9lKVAny60jPHFWni+jbj7U4mCCQF7skt2jlqKnE2MCCwYlMtz9Q2w5hOgwPHshM3DXAnY0S+3lmncXr8PNV5+lUVmuxlukikuKgPRZ+2e/0a/3VPR6VDM7tLwn3g/cNv3xydVz2DZ4QVJN433bFJ4=,iv:AAM29lTFWFVhheXS9wl8YQnWPfURwOVMjQ0NunR00hM=,tag:8UBYzqqw45kRlk4shN23BA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
