--- a/argocd/apps/media-server/bazarr/ingress.yaml
+++ b/argocd/apps/media-server/bazarr/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: bazarr.k8s.yanello.net
+    - host: bazarr.yanello.net
       http:
         paths:
           - backend:
