--- a/argocd/apps/media-server/prowlarr/ingress.yaml
+++ b/argocd/apps/media-server/prowlarr/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: prowlarr.k8s.yanello.net
+    - host: prowlarr.yanello.net
       http:
         paths:
           - backend:
