--- a/argocd/apps/media-server/qbittorrent/ingress.yaml
+++ b/argocd/apps/media-server/qbittorrent/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: qbit.k8s.yanello.net
+    - host: qbit.yanello.net
       http:
         paths:
           - backend:
