--- a/argocd/apps/media-server/radarr/ingress.yaml
+++ b/argocd/apps/media-server/radarr/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: radarr.k8s.yanello.net
+    - host: radarr.yanello.net
       http:
         paths:
           - backend:
