--- a/argocd/apps/media-server/sonarr/service.yaml
+++ b/argocd/apps/media-server/sonarr/service.yaml
@@ -9,7 +9,7 @@ metadata:
   name: sonarr
 spec:
   ports:
-    - name: "8989"
+    - name: "http"
       port: 8989
       targetPort: 8989
   selector:
