--- a/argocd/apps/media-server/tautulli/ingress.yaml
+++ b/argocd/apps/media-server/tautulli/ingress.yaml
@@ -12,7 +12,7 @@ spec:
         paths:
           - backend:
               service:
-                name: overseerr
+                name: tautulli
                 port:
                   number: 8181
             path: /
