--- a/argocd/apps/immich/app.yaml
+++ b/argocd/apps/immich/app.yaml
@@ -1,30 +1,30 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: immich
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  syncPolicy:
-    automated:
-      selfHeal: true
-      prune: true
-    syncOptions:
-      - CreateNamespace=true
-  destination:
-    name: in-cluster
-    namespace: immich
-  project: default
-  source:
-    path: argocd/apps/immich/
-    repoURL: https://github.com/myanello/homelab.git
-    targetRevision: HEAD
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: immich
+#   namespace: argocd
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   syncPolicy:
+#     automated:
+#       selfHeal: true
+#       prune: true
+#     syncOptions:
+#       - CreateNamespace=true
+#   destination:
+#     name: in-cluster
+#     namespace: immich
+#   project: default
+#   source:
+#     path: argocd/apps/immich/
+#     repoURL: https://github.com/myanello/homelab.git
+#     targetRevision: HEAD
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: immich-secret-secrets
+  name: immich-secrets
   namespace: argocd
 spec:
   syncPolicy:
