--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -66,7 +66,7 @@ spec:
         app: immich-ml
     spec:
       nodeSelector:
-        nvidia.com/gpu.present: true
+        nvidia.com/gpu.present: "true"
       containers:
         - env:
             - name: DB_HOSTNAME
@@ -75,7 +75,8 @@ spec:
               value: immich
             - name: REDIS_HOSTNAME
               value: redis
-            - name: MACHINE_LEARNING_PRELOAD__CLIP='ViT-L-16-SigLIP-256__webli'
+            - name: MACHINE_LEARNING_PRELOAD__CLIP
+              value: 'ViT-L-16-SigLIP-256__webli'
           envFrom:
             - secretRef:
                 name: immich-secrets
@@ -191,14 +192,14 @@ spec:
           ports:
             - containerPort: 5432
               protocol: TCP
-          command: >-
-            postgres
-            -c shared_preload_libraries=vectors.so
-            -c 'search_path="$$user", public, vectors'
-            -c logging_collector=on
-            -c max_wal_size=2GB
-            -c shared_buffers=512MB
-            -c wal_compression=on
+          command: 
+            - postgres
+            - -c shared_preload_libraries=vectors.so
+            - -c 'search_path="$$user", public, vectors'
+            - -c logging_collector=on
+            - -c max_wal_size=2GB
+            - -c shared_buffers=512MB
+            - -c wal_compression=on
           volumeMounts:
             - name: db
               mountPath: /var/lib/postgresql/data
