--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -76,7 +76,7 @@ spec:
             - name: REDIS_HOSTNAME
               value: redis
             - name: MACHINE_LEARNING_PRELOAD__CLIP
-              value: 'ViT-L-16-SigLIP-256__webli'
+              value: ViT-L-16-SigLIP-256__webli
           envFrom:
             - secretRef:
                 name: immich-secrets
