--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -191,7 +191,7 @@ spec:
                   name: immich-secrets
                   key: DB_USERNAME
           image: docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
-          imagePullPolicy: Always
+          imagePullPolicy: ifNotPresent
           securityContext:
             runAsUser: 1000
             runAsGroup: 1000
