--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -1,3 +1,5 @@
+replicaCount: &replicaCount 1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,7 +7,7 @@ metadata:
   labels:
     app: immich-server
 spec:
-  replicas: 1
+  replicas: *replicaCount
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -54,7 +56,7 @@ metadata:
   labels:
     app: immich-ml
 spec:
-  replicas: 1
+  replicas: *replicaCount
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -103,7 +105,7 @@ metadata:
   labels:
     app: typesense
 spec:
-  replicas: 1
+  replicas: *replicaCount
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -140,7 +142,7 @@ metadata:
   labels:
     app: redis
 spec:
-  replicas: 1
+  replicas: *replicaCount
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -164,7 +166,7 @@ metadata:
   labels:
     app: postgres
 spec:
-  replicas: 1
+  replicas: *replicaCount
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -204,6 +206,26 @@ spec:
                   key: DB_USERNAME
           image: docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
           imagePullPolicy: IfNotPresent
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - |
+                  pg_isready --dbname="$${POSTGRES_DB}" --username="$${POSTGRES_USER}" || exit 1;
+                  Chksum="$$(psql --dbname="$${POSTGRES_DB}" --username="$${POSTGRES_USER}" --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')";
+                  echo "checksum failure count is $$Chksum";
+                  [ "$$Chksum" = '0' ] || exit 1
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - pg_isready --dbname="$${POSTGRES_DB}" --username="$${POSTGRES_USER}"
+            initialDelaySeconds: 5
+            periodSeconds: 10
           securityContext:
             runAsUser: 1000
             runAsGroup: 1000
