--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -1,4 +1,9 @@
-replicaCount: &replicaCount 1
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: immich-config
+data:
+  replicaCount: &replicaCount "1"
 ---
 apiVersion: apps/v1
 kind: Deployment
