--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -1,10 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: immich-config
-data:
-  replicaCount: &replicaCount "1"
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -12,7 +5,7 @@ metadata:
   labels:
     app: immich-server
 spec:
-  replicas: *replicaCount
+  replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -61,7 +54,7 @@ metadata:
   labels:
     app: immich-ml
 spec:
-  replicas: *replicaCount
+  replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -110,7 +103,7 @@ metadata:
   labels:
     app: typesense
 spec:
-  replicas: *replicaCount
+  replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -147,7 +140,7 @@ metadata:
   labels:
     app: redis
 spec:
-  replicas: *replicaCount
+  replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -171,7 +164,7 @@ metadata:
   labels:
     app: postgres
 spec:
-  replicas: *replicaCount
+  replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
