--- a/argocd/apps/immich/manifests/deploy.yaml
+++ b/argocd/apps/immich/manifests/deploy.yaml
@@ -153,6 +153,9 @@ spec:
         - image: docker.io/redis:6.2-alpine@sha256:905c4ee67b8e0aa955331960d2aa745781e6bd89afc44a8584bfd13bc890f0ae
           imagePullPolicy: IfNotPresent
           name: redis
+          ports:
+            - containerPort: 6379
+              protocol: TCP
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -181,8 +184,8 @@ spec:
               value: '--data-checksums'
             - name: POSTGRES_USER
               value: immich
-            - name: DB_DATA_LOCATION
-              value: /var/lib/postgresql/data
+            # - name: DB_DATA_LOCATION
+            #   value: /var/lib/postgresql/data
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
