--- a/argocd/apps/immich/app.yaml
+++ b/argocd/apps/immich/app.yaml
@@ -20,24 +20,24 @@ spec:
     path: argocd/apps/immich/manifests
     repoURL: https://github.com/myanello/homelab.git
     targetRevision: HEAD
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: immich-secrets
-  namespace: argocd
-spec:
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - CreateNamespace=true
-  destination:
-    namespace: immich
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    path: argocd/apps/immich/secrets
-    repoURL: https://github.com/myanello/homelab.git
-    targetRevision: HEAD
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: immich-secrets
+#   namespace: argocd
+# spec:
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#     - CreateNamespace=true
+#   destination:
+#     namespace: immich
+#     server: https://kubernetes.default.svc
+#   project: default
+#   source:
+#     path: argocd/apps/immich/secrets
+#     repoURL: https://github.com/myanello/homelab.git
+#     targetRevision: HEAD
