include frigate secrets in app

--- a/argocd/apps/frigate/app.yaml
+++ b/argocd/apps/frigate/app.yaml
@@ -54,24 +54,27 @@ spec:
     - repoURL: https://github.com/myanello/homelab.git
       targetRevision: HEAD
       ref: values
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: frigate-secrets
-  namespace: argocd
-spec:
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
-  destination:
-    namespace: frigate
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    path: argocd/apps/frigate/secrets
-    repoURL: https://github.com/myanello/homelab.git
-    targetRevision: HEAD
+    - repoURL: https://github.com/myanello/homelab.git
+      targetRevision: HEAD
+      path: argocd/apps/frigate/secrets
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: frigate-secrets
+#   namespace: argocd
+# spec:
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
+#   destination:
+#     namespace: frigate
+#     server: https://kubernetes.default.svc
+#   project: default
+#   source:
+#     path: argocd/apps/frigate/secrets
+#     repoURL: https://github.com/myanello/homelab.git
+#     targetRevision: HEAD
