--- a/argocd/apps/media-server/tautulli/deploy.yaml
+++ b/argocd/apps/media-server/tautulli/deploy.yaml
@@ -28,6 +28,8 @@ spec:
           image: linuxserver/tautulli:latest
           imagePullPolicy: Always
           name: tautulli
+          nodeSelector:
+            storage: ssd
           ports:
             - containerPort: 8181
               protocol: TCP
