--- a/argocd/apps/media-server/tautulli/deploy.yaml
+++ b/argocd/apps/media-server/tautulli/deploy.yaml
@@ -18,7 +18,7 @@ spec:
         app: tautulli
     spec:
       nodeSelector:
-        storage.type/ssd: true
+        storage.type/ssd: 'true'
       containers:
         - env:
             - name: PGID
