--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -1,23 +1,23 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: authentik-secrets
-  namespace: argocd
-spec:
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - CreateNamespace=true
-  destination:
-    namespace: authentik
-    server: https://kubernetes.default.svc
-  project: default
-  source:
-    path: argocd/apps/authentik/secrets
-    repoURL: https://github.com/myanello/homelab.git
-    targetRevision: HEAD
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: authentik-secrets
+#   namespace: argocd
+# spec:
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#     - CreateNamespace=true
+#   destination:
+#     namespace: authentik
+#     server: https://kubernetes.default.svc
+#   project: default
+#   source:
+#     path: argocd/apps/authentik/secrets
+#     repoURL: https://github.com/myanello/homelab.git
+#     targetRevision: HEAD
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -37,58 +37,61 @@ spec:
     name: in-cluster
     namespace: authentik
   project: default
-  source:
-    repoURL: https://charts.goauthentik.io/
-    targetRevision: "*"
-    chart: authentik
-    helm:
-      valuesObject:
-        global:
-          envFrom:
-            - secretRef:
-                name: authentik-secrets
-        authentik:
-          email:
-            host: smtp.gmail.com
-            port: 587
-            username: "marcus.yanello@gmail.com"
-            from: "authentik <marcus.yanello@gmail.com>"
-            use_tls: true
-            timeout: 30
-          error_reporting:
-            enabled: true
-        server:
-          ingress:
-            ingressClassName: nginx
-            enabled: true
-            hosts:
-              - authentik.k8s.yanello.net
-          replicas: 3
-        worker:
-          replicas: 3
-        redis:
-          enabled: true
-          master:
-            persistence:
-              enabled: false
-          replica:
-            persistence:
-              enabled: false
-          sentinel:
-            persistence:
-              enabled: false
-        postgresql:
-          enabled: true
-          primary:
-            persistence:
+  sources:
+    - repoURL: https://github.com/myanello/homelab.git
+      targetRevision: HEAD
+      path: argocd/apps/authentik/secrets
+    - repoURL: https://charts.goauthentik.io/
+      targetRevision: "*"
+      chart: authentik
+      helm:
+        valuesObject:
+          global:
+            envFrom:
+              - secretRef:
+                  name: authentik-secrets
+          authentik:
+            email:
+              host: smtp.gmail.com
+              port: 587
+              username: "marcus.yanello@gmail.com"
+              from: "authentik <marcus.yanello@gmail.com>"
+              use_tls: true
+              timeout: 30
+            error_reporting:
               enabled: true
-              storageClass: nfs-storage
-              accessMode: ReadWriteOnce
-          auth:
-            username: authentik
-            database: authentik
-            existingSecret: authentik-secrets
-            secretKeys:
-              adminPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
-              userPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
-              replicationPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
+          server:
+            ingress:
+              ingressClassName: nginx
+              enabled: true
+              hosts:
+                - authentik.k8s.yanello.net
+            replicas: 3
+          worker:
+            replicas: 3
+          redis:
+            enabled: true
+            master:
+              persistence:
+                enabled: false
+            replica:
+              persistence:
+                enabled: false
+            sentinel:
+              persistence:
+                enabled: false
+          postgresql:
+            enabled: true
+            primary:
+              persistence:
+                enabled: true
+                storageClass: nfs-storage
+                accessMode: ReadWriteOnce
+            auth:
+              username: authentik
+              database: authentik
+              existingSecret: authentik-secrets
+              secretKeys:
+                adminPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
+                userPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
+                replicationPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
