--- a/argocd/apps/media-server/qbittorrent/net-policy.yaml
+++ b/argocd/apps/media-server/qbittorrent/net-policy.yaml
@@ -27,7 +27,6 @@ spec:
       ports:
         - protocol: TCP
           port: 8080
-
               
   egress:
     # Responses to services which use qBittorrent
@@ -48,13 +47,13 @@ spec:
     - to:
         - ipBlock:
             cidr: 146.70.217.66/32 
-    - to:
-        - namespaceSelector: {}
-          podSelector:
-            matchLabels:
-              k8s-app: kube-dns
-      ports:
-        - protocol: UDP
-          port: 53
-        - protocol: TCP
-          port: 53
+    # - to:
+    #     - namespaceSelector: {}
+    #       podSelector:
+    #         matchLabels:
+    #           k8s-app: kube-dns
+    #   ports:
+    #     - protocol: UDP
+    #       port: 53
+    #     - protocol: TCP
+    #       port: 53
